# CAPEsolo

./: README.md  README.rst  interactive_debugger.md  pyproject.toml
CAPEsolo/: analysis_conf.default  analyzer.py  cfg.ini  cli.py  version.txt
CAPEsolo/capelib/: behavior.py  cape_utils.py  cmdconsts.py  logtbl.py  netlog.py  objects.py  parse_pe.py  path_utils.py  resultserver.py  signatures.py  strings.py  utils.py  utils_pretty_print_funcs.py  yaralib.py
CAPEsolo/classes/: behavior_panel.py  configs_panel.py  custom_grid.py  debug_console.py  debug_controls.py  debug_graph.py  debug_pipe.py  debugger_panel.py  grid_search_dialog.py  hexview_window.py  json_report.py  key_event.py  logger_window.py  main_frame.py  patch_assembler.py  patch_dialog.py  patch_models.py  payloads_panel.py  pe_window.py  process_yara.py  search_dialog.py  signatures_panel.py  splash_screen.py  start_panel.py  strings_panel.py  target_info.py  timer_window.py  web_server.py  yara_panel.py
CAPEsolo/data/yara/: Amatera.yar  BruteRatel.yar  Carbanak.yar  Formbook.yar  MemExec.yar  MirrorBlast.yar  NitrogenLoader.yar  OysterBed.yar  OysterShell.yar  Quickbind.yar  Socks5Systemz.yar  Zloader.yar
CAPEsolo/graph/: viewer.html
CAPEsolo/lib/api/: process.py
CAPEsolo/lib/common/: constants.py  defines.py  errors.py  zip_utils.py
CAPEsolo/lib/core/: log.py  packages.py  pipe.py  privileges.py  startup.py
CAPEsolo/modules/auxiliary/: digisig.py  human.py  posproc.py  tlsdump.py
CAPEsolo/parsers/: AgentTesla.py  Blister.py  BruteRatel.py  BumbleBee.py  BumbleBee.yar  Carbanak.py  DarkGate.py  Emotet.py  GraceWire.py  IcedID.py  Latrodectus.py  NanoCore.py  Nighthawk.py  NitrogenLoader.py  Njrat.py  Oyster.py  QakBot.py  QuasarRAT.py  Quickbind.py  RedLine.py
CAPEsolo/signatures/: CAPE.py  cape_extracted.py  https.py
CAPEsolo/signatures/community/: http_request.py  injection_network.py  network_activity.py  network_anomaly.py  network_bind.py  network_cnc_encrypted.py  network_cnc_generic.py  network_cnc_http.py  network_dga.py  network_dns_suspicious.py  network_dyndns.py  network_excessive_udp.py  network_explorer.py  network_http.py  (+14 more)
CAPEsolo/utils/: debug_test_server.py  update_parsers.py  update_yara.py
Capesolo/: cfg.ini  cli.py
Capesolo/capelib/: objects.py  resultserver.py  utils.py  yaralib.py
Capesolo/parsers/: GuLoader.py
extras/: gevent-24.2.1-cp311-cp311-win32.whl  gevent-24.2.1-cp312-cp312-win32.whl  greenlet-3.0.3-cp311-cp311-win32.whl  greenlet-3.0.3-cp312-cp312-win32.whl
(+38 files in other folders)
