[tool.poetry]
name = "CAPEsolo"
version = "0.5.4a8"
description = "Standalone CAPEMON"
authors = ["enzok <7831008+enzok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
wxpython = "^4.2.3"
pywin32 = "^310"
bson = "^0.5.10"
yara-python = "^4.5.2"
pefile = "^2024.8.26"
cryptography = "^45.0.2"
requests = "^2.32.3"
SFlock2 = "==0.3.69"
greenlet = "^3.2.2"
gevent = "^25.5.1"
dnspython = "^2.6.1"
tldextract = "^5.3.0"
bs2json = "^0.1.2"
cape-parsers = "*"
pytest = "^8.3.5"
setuptools = "==80.8.0"
typing-extensions = "==4.13.2"
ruff = "==0.11.10"
poetry-core = "^2.1.3"
distorm3s = "==3.5.4"
graphviz = "^0.20.3"

[tool.poetry.scripts]
CAPEsolo = "CAPEsolo.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
